<resources>
    <string name="app_name">FonoTest</string>
    <string name="nombre">Nombre</string>
    <string name="datos_paciente">DATOS PACIENTE</string>
    <string name="apellido">Apellido</string>
    <string name="cedula">Número de Cédula</string>
    <string name="continuar">Continuar</string>
    <string name="glissando">Glissando</string>
    <string name="efecto_kaiser">Efecto Kaiser</string>
    <string name="fonetograma">Fonetograma</string>
    <string name="edad_paciente">Edad</string>
    <string name="titulo_login">Ingresar</string>


    <string name="login_usr">Nombre de usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="login_error">Usuario o contraseña invalidos</string>
    <string name="datos_medico">Datos Médico</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="fonetograma_hablado">Fonetograma Hablado</string>
    <string name="frecuencia_tiempo">Frecuencia / Tiempo</string>
    <string name="intensidad_tiempo">Intensidad / Tiempo</string>
    <string name="intensidad_frecuencia">Intensidad / Frecuencia</string>
    <string name="grabar_audio">GRABAR AUDIO</string>
    <string name="cargar_audio">CARGAR AUDIO</string>
</resources>
