<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pruebas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amcaicedo.sena.apppruebavoz.PruebasActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/medica"
            android:scaleType="centerCrop"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

            <TextView
                android:id="@+id/btnGlissando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glissando"
                android:textSize="@dimen/tam_botones"
                android:layout_marginBottom="@dimen/margen_botones"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/btnEKaiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/efecto_kaiser"
                android:textSize="@dimen/tam_botones"
                android:layout_marginBottom="@dimen/margen_botones"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/btnFonetograma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fonetograma"
                android:textSize="@dimen/tam_botones"
                android:textAlignment="center"/>

    </LinearLayout>

</RelativeLayout>
